--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css" />
   <script src="app/main.js" defer></script>
+  <script src="app/metodoForeach.js"></script>
+  <script src="app/metodoMap.js"></script>
 </head>
 <header class="header">
   <h1><img src="imagens/Logo-1.png" /></h1>
